--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,7 +25,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 30
+ if (project.android.hasProperty("namespace")) {
+      namespace 'io.flutter.plugins.pusher.core'
+    }
+    compileSdkVersion 34
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
