--- a/android/build.gradle
+++ b/android/build.gradle
@@ -25,9 +25,8 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
- if (project.android.hasProperty("namespace")) {
-      namespace 'io.flutter.plugins.pusher.core'
-    }
+namespace 'com.pusher.channels_flutter'
+
     compileSdkVersion 34
 
     compileOptions {
